[package]
name = "deadlocked"
version = "2.2.2"
edition = "2021"

[dependencies]
bytemuck = "1.19"
eframe = "0.29"
glam = { version = "0.29", features = ["bytemuck"] }
ureq = { version = "2.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
