[package]
name = "deadlocked"
version = "3.0.2"
edition = "2021"

[dependencies]
bytemuck = "1.19"
eframe = "0.29"
env_logger = "0.11"
glam = { version = "0.29", features = ["bytemuck"] }
log = "0.4"
sdl3 = { version = "0.11" ,features = ["build-from-source-static"]}
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
toml = "0.8"

[profile.release]
lto = true
strip = "debuginfo"
codegen-units = 1
